Add `enable-native-access` option to avoid compiler warning